# redis_om_fastapi

./: README.md  docker-compose.override.yml  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  prestart.sh  pyproject.toml  start-reload.sh  start.sh
backend/fastapi_redis_om/: __init__.py  __main__.py  main.py  version.py
backend/fastapi_redis_om/api/: __init__.py
backend/fastapi_redis_om/api/v1/: __init__.py
backend/fastapi_redis_om/api/v1/routes/: route_redis_om_demo.py
backend/fastapi_redis_om/core/: config.py  redis.py
backend/fastapi_redis_om/schemas/: __init__.py  schema_redis_om_demo.py
