[tool.poetry]
name = "fastapi_redis_om"
version = "0.1.0"
description = "Simple Demo of FastAPI and Python Redis OM using Redis Stack."
authors = ["Brent Stone <brent-stone@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aioredis = "^2.0.1"
redis = "^4.5.1"
async-timeout = "^4.0.2"
pydantic = "^1.10.5"
fastapi = {extras = ["all"], version = "^0.92.0"}
redis-om = "^0.1.2"
requests = "^2.28.2"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
types-redis = "^4.5.1.1"
typing-extensions = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
